# cstorm125.github.io

./: .gitignore  .nojekyll  _quarto.yml  about.html  about.qmd  index.html  index.qmd  index.xml  listings.json  main.py  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css
_freeze/posts/aib2025_survey/index/execute-results/: html.json
_freeze/posts/benchmaxxing/index/execute-results/: html.json
_freeze/posts/dml/index/execute-results/: html.json
_freeze/posts/fwl/index/execute-results/: html.json
_freeze/posts/interesting_career/index/execute-results/: html.json
_freeze/posts/post-with-code/index/execute-results/: html.json
_freeze/posts/sales_prediction/index/execute-results/: html.json
_freeze/posts/sql_almost/index/execute-results/: html.json
data/sales_prediction/: product_description_category.csv
notebook/: sales_prediction.html  sales_prediction.ipynb  sql_almost_exercise.html  sql_almost_exercise.ipynb
posts/aib2025_survey/: index.html  index.qmd
posts/benchmaxxing/: index.html  index.qmd
posts/dml/: index.html  index.qmd
posts/fwl/: index.html  index.qmd
posts/interesting_career/: index.html  index.qmd
posts/post-with-code/: index.html  index.qmd
posts/sales_prediction/: index.html  index.qmd
posts/sql_almost/: index.html  index.qmd
posts/welcome/: index.html  index.qmd
site_libs/bootstrap/: bootstrap-2a153813c0526b94c13c18dbb8954ed1.min.css  bootstrap-3fcf6f9ed68d419e61de4dc6f9dc2392.min.css  bootstrap-b12f67c1ef80f99d4181da54e6f09d60.min.css  bootstrap.min.css
(+123822 files in other folders)
