[project]
name = "cstorm125-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogluon>=1.3.1",
    "dspy>=2.6.27",
    "duckdb>=1.3.0",
    "ipywidgets>=8.1.7",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "plotnine>=0.14.6",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
]
